Fix tables on mobile

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -255,6 +255,7 @@ blockquote p {
 table {
     border-collapse: separate;
     hyphens: auto;
+    max-width: 100%;
 }
 
 th {
@@ -363,6 +364,9 @@ div.youtube iframe {
     }
     .menu-item {
         font-size: 14px !important;
+    }
+    table, th, .flex_table {
+        font-size: 11px !important;
     }
     #menu > div {
         padding: 2px 8px !important;
